2000-04-03  Murata Shuuichirou  <mrt@notwork.org>

	* skk-viper.el (skk-viper-normalize-map): Use
	local-variable-if-set-p instead of local-variable-p, when running
	on FSF emacs.  Sync with XEmacs case.

2000-03-29  Yuh Ohmura  <yutopia@t3.rim.or.jp>

	* READMEs/CVS_on_Windows : cancel below change

2000-03-29  Yuh Ohmura <yutopia@t3.rim.or.jp>

	* READMEs/CVS_on_Windows : add about timezone.

2000-03-24  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* experimental/skk-exserv.el (server-version): Bug fixed.

	* SKK-MK (SKK_MODULES): Add `skk-exserv'.

	* experimental/skk-exserv.el: New experimental program.

	* experimental/skk-exsearch.el (search-engine): Convert
	`skk-henkan-key' by `skk-num-compute-henkan-key' if
	`skk-use-numeric-conversion' is non-nil.
        Remove arg ARGUMENT.
	(skk-cdbget-search): Remove second argument `skk-henkan-key'.

2000-03-22  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* skk-server.el (skk-adjust-search-prog-list-for-server-search):
	Remove unproper comments.

2000-03-21  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* experimental/skk-exsearch.el (search-engine): Get forward
	one character if there is a candidates string in the working
	buffer.
	(synchronous-search-engine): Removed (server is connecting with
	TCP network stream, not started by `start-process'...)
	(server-search-engine): Removed.
	(synchronous-search-engine): New slot `success-exit-code' and
	`error-exit-code' are provided.
	(core-engine): Refer to slot of eigine `success-exit-code' and
	`error-exit-code'.
	If error occured, show stderr as error message.
	Bug fixed as to BUFFER argument of `call-process'.

2000-03-20  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* skk-server.el (skk-open-server): Use temporary variable PROC for
	NEmacs.

	* experimental/skk-exsearch.el (search-engine): New superclass.
	(synchronous-search-engine): Change it to class (not superclass).
	(asynchronous-search-engine): Specify `search-engine' as its
	superclass.
	Doc fixed.